--- a/Accordion/AccordionExplorer/AccordionExplorer/GettingStarted.xaml
+++ b/Accordion/AccordionExplorer/AccordionExplorer/GettingStarted.xaml
@@ -2,10 +2,8 @@
     x:Class="AccordionExplorer.GettingStarted"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:AccordionExplorer"
     xmlns:c1="using:C1.WinUI.Accordion"
     xmlns:core="using:C1.WinUI.Core"
-    xmlns:input="using:C1.WinUI.Input"
     xmlns:calendar="using:C1.WinUI.Calendar"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -56,7 +54,7 @@
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <StackPanel Orientation="Horizontal" Grid.ColumnSpan="2">
-            <input:C1CheckBox Content="Fill" IsChecked="{Binding ElementName=accordion,Path=Fill, Mode=TwoWay}" Margin="8"/>
+            <core:C1CheckBox Content="Fill" IsChecked="{Binding ElementName=accordion,Path=Fill, Mode=TwoWay}" Margin="8"/>
             <TextBlock Text="ExpandMode" Margin="8" VerticalAlignment="Center"/>
             <ComboBox x:Name="expandModesCombo" SelectionChanged="OnExpandModesChanged" Margin="0 8"/>
             <TextBlock Text="ExpandDirection" Margin="8" VerticalAlignment="Center"/>
