--- a/Grid/FlexGridExplorer/FlexGridExplorer/View/VirtualMode.xaml
+++ b/Grid/FlexGridExplorer/FlexGridExplorer/View/VirtualMode.xaml
@@ -1,11 +1,13 @@
 ﻿<UserControl
-    x:Class="FlexGridExplorer.NewRow"
+    x:Class="FlexGridExplorer.VirtualMode"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:c1="using:C1.WinUI.Grid"
-    xmlns:res="using:FlexGridExplorer.Resources"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:c1="using:C1.WinUI.Grid"
     mc:Ignorable="d">
-    <c1:FlexGrid x:Name="grid" NewRowPlaceholder="{x:Bind res:AppResources.NewRowPlaceholder}" NewRowPosition="Top" SelectionMode="RowRange" AllowDragging="Both" HeadersVisibility="All" />
+
+    <Grid>
+        <c1:FlexGrid x:Name="grid"/>
+    </Grid>
 </UserControl>
