--- a/NET_8/DataFilter/DataFilterExplorer/View/ConditionalFiltersSample.xaml
+++ b/NET_8/DataFilter/DataFilterExplorer/View/ConditionalFiltersSample.xaml
@@ -6,6 +6,7 @@
              xmlns:core="using:C1.WinUI.Core"
              xmlns:c1="using:C1.WinUI.DataFilter"
              xmlns:grid="using:C1.WinUI.Grid"
+             xmlns:res="using:DataFilterExplorer.Resources"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Name="LayoutRoot">
@@ -15,10 +16,10 @@
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Horizontal">
-            <core:C1CheckBox x:Name="cbAutoApply" Height="25" Content="Auto Apply Filter" IsChecked="True" Margin="4"
+            <core:C1CheckBox x:Name="cbAutoApply" Height="25" Content="{x:Bind res:AppResources.AutoApplyFilter}" IsChecked="True" Margin="4"
                               Checked="CbAutoApply_CheckChanged" Unchecked="CbAutoApply_CheckChanged" />
-            <core:C1Button Content="Apply Filter" Click="BtnApplyFilter_Click" ToolTipService.ToolTip="Apply filter" Margin="4" />
-            <core:C1Button Content="Save Filter" Click="BtnSaveFilter_Click" ToolTipService.ToolTip="Save filter" Margin="4" />
+            <core:C1Button Content="{x:Bind res:AppResources.ApplyFilter}" Click="BtnApplyFilter_Click" ToolTipService.ToolTip="Apply filter" Margin="4" />
+            <core:C1Button Content="{x:Bind res:AppResources.SaveFilter}" Click="BtnSaveFilter_Click" ToolTipService.ToolTip="Save filter" Margin="4" />
         </StackPanel>
 
         <Grid Grid.Row="1">
@@ -30,7 +31,7 @@
             <c1:C1DataFilter x:Name="c1DataFilter" AutoGenerateFilters="False" VerticalAlignment="Top">
                 <c1:C1DataFilter.Filters>
                     <c1:TextFilter PropertyName="Model" />
-                    <c1:DateFilter PropertyName="DateProductionLine" HeaderText="Date Production Line" />
+                    <c1:DateTimeFilter PropertyName="DateProductionLine" HeaderText="Date Production Line" />
                     <c1:NumericFilter PropertyName="Price" Increment="1000" Format="F2" />
                     <c1:FullTextFilter PropertyName="Brand" HeaderText="Brand" />
                 </c1:C1DataFilter.Filters>
