--- a/NET_8/DataFilter/DataFilterExplorer/View/FilterSummaryControl.xaml
+++ b/NET_8/DataFilter/DataFilterExplorer/View/FilterSummaryControl.xaml
@@ -6,6 +6,7 @@
              xmlns:core="using:C1.WinUI.Core"
              xmlns:c1="using:C1.WinUI.DataFilter"
              xmlns:grid="using:C1.WinUI.Grid"
+             xmlns:res="using:DataFilterExplorer.Resources"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Name="LayoutRoot">
@@ -15,9 +16,9 @@
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Horizontal">
-            <core:C1CheckBox x:Name="cbAutoApply" Height="25" Content="Auto Apply Filter" IsChecked="True" Margin="4"
+            <core:C1CheckBox x:Name="cbAutoApply" Height="25" Content="{x:Bind res:AppResources.AutoApplyFilter}" IsChecked="True" Margin="4"
                               Checked="CbAutoApply_CheckChanged" Unchecked="CbAutoApply_CheckChanged" />
-            <core:C1Button x:Name="btnApplyFilter" Content="Apply Filter" Click="BtnApplyFilter_Click" ToolTipService.ToolTip="Apply filter" Margin="4"/>
+            <core:C1Button x:Name="btnApplyFilter" Content="{x:Bind res:AppResources.ApplyFilter}" Click="BtnApplyFilter_Click" ToolTipService.ToolTip="Apply filter" Margin="4"/>
 
         </StackPanel>
 
