--- a/NET_8/DataFilter/DataFilterExplorer/View/VirtualSource.xaml
+++ b/NET_8/DataFilter/DataFilterExplorer/View/VirtualSource.xaml
@@ -6,6 +6,7 @@
              xmlns:core="using:C1.WinUI.Core"
              xmlns:c1="using:C1.WinUI.DataFilter"
              xmlns:grid="using:C1.WinUI.Grid"
+             xmlns:res="using:DataFilterExplorer.Resources"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Name="LayoutRoot">
@@ -15,8 +16,8 @@
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Horizontal">
-            <core:C1Button Content="Load Or Generate" Click="OnGenerateSource" Margin="4"/>
-            <core:C1Button Content="Apply Filter" Click="BtnApplyFilter_Click" Margin="4"/>
+            <core:C1Button Content="{x:Bind res:AppResources.LoadOrGenerate}" Click="OnGenerateSource" Margin="4"/>
+            <core:C1Button Content="{x:Bind res:AppResources.ApplyFilter}" Click="BtnApplyFilter_Click" Margin="4"/>
             <TextBlock x:Name="message" Margin="4" VerticalAlignment="Center"/>
         </StackPanel>
 
